--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,11 @@ section.result .card .svg {
   }
 }
 .logo {
-  position: fixed;
+  /* position: fixed;
   top: 40px;
-  left: 40px;
-  width: 80px;
-  height: 80px;
+  left: 40px; */
+  width: 50px;
+  height: 50px;
 }
 
 .main-card {
