--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,27 @@ section.result .card .svg {
 .weatherIcon {
   width: 5%;
 }
+
+/* form .form-control:focus{
+  box-shadow: ghostwhite;
+  border: 2px solid ghostwhite;
+} */
+
+input.form-control::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+input.form-control:focus {
+  box-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+input.form-control {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #fff !important;
+  border: 1.5px solid white;
+  border-radius: 10px;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
+  outline: none;
+  transition: all 0.3s ease;
+}
